--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <script type="module" src="/src/index.jsx"></script> 
+    <script type="module" src="/src/main.jsx"></script> 
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
